--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compileOnly group: 'com.mojang', name: 'authlib', version: '1.5.25'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
     implementation group: 'org.jetbrains', name: 'annotations', version: '15.0'
+    implementation group: 'net.kyori', name: 'adventure-api', version: '4.13.0'
 }
 
 def targetJavaVersion = 8
